crates/xabi/tests/ui/unsupported_shapes/data_raw_pointer_field.rs
#[xabi::data]
pub struct BadData {
    pub value: *mut u8,
}

fn main() {}
